Alembic import: Fix crash with mcol indices out of bounds

Part of T57377

Reviewers: sybren

Maniphest Tasks: T57377

Differential Revision: https://developer.blender.org/D3847